# graph-rca

./: .coverage  .env.example  .gitignore  EVALUATION_README.md  README.md  __init__.py  check_prerequisites.py  docker-compose.gpu.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  run-gpu-server.sh  run.sh  run_all_experiments.py  sample_documentation.txt  start.sh  stop.sh
IEEE Paper/: access.tex  generate_noise_chart.py  orcidlink.sty
app/: __init__.py
app/core/: rag.py  (+1 more)
backend/: .dockerignore  __init__.py  main.py  requirements.txt
core/: database_handlers.py  embedding.py  rag.py
data/: generated_logs.json  log_gen.py
docs/: API.md  sample_documentation.txt
experiments/: README.md  README_EVAL.md  REPRODUCIBILITY.md  batch_inference_benchmark.py  benchmark.py  comprehensive_overnight.py  evaluate_rag_accuracy.py  full_benchmark.py  master_overnight.py  overnight_evaluation.sh  overnight_experiments.py  rerun_eval.sh  run_batch_benchmark.sh  run_real_evaluation.sh  statistical_analysis.py
frontend/: .env.example  app.py  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.mjs  tsconfig.json  vite.config.ts
models/: context_data_models.py  graph_data_models.py  json_models.py  parsing_data_models.py  rag_response_data_models.py
research/: check_prerequisites.py  run_all.py
tests/: test_data_models.py  test_database_handlers.py  test_embedding.py  test_rag.py  test_utils.py
utils/: context_builder.py  database_healthcheck.py  graph_generator.py  json_generator.py  log_parser.py  parser.py
(+482 files in other folders)
